2003-03-13  Per Bothner  <per@bothner.com>

	* CodeAttr.java (getSP):  New method.

	* CodeAttr.java (emitPushString):  Don't do redundant pushType
	if we call emitPushNull.

2002-11-19  Daniel Bonniot  <bonniot@users.sourceforge.net>

	* CodeAttr.java (emitSwap):  Handle two word values.

2002-10-21  Daniel Bonniot  <bonniot@users.sourceforge.net>

	* CodeAttr.java (doPendingFinalizers): Fix verification error
	when returning a value inside a try/finally.

2002-08-16  Per Bothner  <per@bothner.com>

	* PrimType.java (compare):  tostring_type is more general.
	* ArrayType.java (compare):  Likewise.

2002-08-06  Per Bothner  <per@bothner.com>

	* ObjectType.java (isExisting):  New method.

2002-08-04  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitCheckcast):  Check if already isSubclass.

2002-07-21  Per Bothner  <per@bothner.com>

	* Field.java (toString):  New method.

2002-06-13  Per Bothner  <per@bothner.com>

	* ClassType.java (writeExternal):  Fix typo in exception message.

2002-06-05  Per Bothner  <per@bothner.com>

	* PrimType.java (emitCoerceToObject):  New method.

2002-05-19  Per Bothner  <per@bothner.com>

	* CodeAttr.java (doPendingFinalizers):  New public method.
	(emitReturn):  Call doPendingFinalizers.
	(getCurrentTry):  New method.

2002-05-06  Per Bothner  <per@bothner.com>

	* Method.java (toString):  Use '.' before method name.

2002-04-19  Daniel Bonniot  <bonniot@users.sourceforge.net>

	* ClassType.java (addMethods): Prevents addMethods to incorrectly list
	twice the methods of the class.

2002-04-18  Per Bothner  <per@bothner.com>

	* ArrayClassLoader.java:  New default constructor.
	(addClass(Class), addClass(ClassType)):  New overloaded methods.

	* ClassType.java (writeToArray):  Handle IOException.

	* CodeAttr.java (emitInvoke):  If method name is "<init>",
	do invokeSpecial.

	* CodeAttr.java (emitGotoIfCompare2):  Support object eq/ne compares.
	(emitGotoIfEq,  emitGotoIfNE):  Re-implement using emitGotoIfCompare2.
